# Laguerre-FDTD

./: README.md
Common/: README.md  helper_cuda.h  helper_cuda_drvapi.h  helper_multiprocess.cpp  helper_nvJPEG.hxx  multithreading.cpp  rendercheck_d3d10.cpp  rendercheck_d3d11.cpp  rendercheck_d3d9.cpp
Linux/: Basic.shader  CMakeLists.txt  LFDTD.cpp  LFDTD.h  LFDTD_Coe.cpp  LFDTD_Coe.h  Matrix.h  Shader.cpp  Shader.h  Vector.h  global.h  main.cpp  spMV.cu  spMV.cuh
Windows/: LFDTD_CUDA_PARDISO.sln
Windows/Dependecies/boost_1_83_0/: README.md
Windows/LFDTD_CUDA_PARDISO/: Basic.shader  FileReader.h  LFDTD.cpp  LFDTD.h  LFDTD_CUDA_PARDISO.vcxproj  LFDTD_CUDA_PARDISO.vcxproj.filters  LFDTD_Coe.cpp  LFDTD_Coe.h  Matrix.h  Shader.cpp  Shader.h  Vector.h  global.h  main.cpp  spMV.cu  spMV.cuh
Windows/PatchAntennaArrayMesh/: dxh.txt  dye.txt  dze.txt  dzh.txt  eps.txt  sigmax.txt  sigmay.txt
